#3222 fixed the layout and figure references of ch11 and ch12

--- a/doc/Deliverables/BW4T3Instructions/BW4T3_instructions.tex
+++ b/doc/Deliverables/BW4T3Instructions/BW4T3_instructions.tex
@@ -289,15 +289,16 @@ Linked to the Scenario Editor are the Bot Store and the E-partner Store, which w
 
 \pagebreak
 \subsection{Configuration Panel}
-A picture of the configuration panel can be found in Figure \ref{fig:ConfigPanel}.
+Figure \ref{fig:ConfigPanel} shows the configuration panel.
+To create a new configuration file, select $File$ $\to$ $New$ in the menu bar. You will now get a new configuration with the default values. Creating a new configuration will reset all previous changes you have made, so make sure you save your current configuration first if you want to keep it.
+
 \begin{figure}[h]
 \begin{center}
 \includegraphics[width=0.4\textwidth]{config.png}
 \end{center}
 \caption{Configuration Panel}\label{fig:ConfigPanel}
 \end{figure}
-\subsubsection{New configuration file}
-To create a new configuration file, select $File$ $\to$ $New$ in the menu bar. You will now get a new configuration with the default values. Creating a new configuration will reset all previous changes you have made, so make sure you save your current configuration first if you want to keep it.
+
 
 \subsection{Open configuration file}
 To open an existing configuration file, select $File$ $\to$ $Open$ in the menu bar. A window will pop up where you can select the folder where the configuration file is saved to. Once you have selected the right folder, select the file and click the $Open$ button.
